mise en place du CRUD about dans admin

--- a/src/Labs/UboldBundle/Resources/views/Includes/sidebar.html.twig
+++ b/src/Labs/UboldBundle/Resources/views/Includes/sidebar.html.twig
@@ -6,7 +6,7 @@
                 <li class="text-muted menu-title">Menu</li>
 
                 <li class="has_sub">
-                    <a href="" class="waves-effect"><i class="ti-files"></i><span> {{ 'Page Qui sommes nous  ' }} </span> </a>
+                    <a href="{{ path('about_list') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Page Qui sommes nous  ' }} </span> </a>
                 </li>
             </ul>
             <div class="clearfix"></div>
