--- a/src/Labs/UboldBundle/Resources/views/Includes/sidebar.html.twig
+++ b/src/Labs/UboldBundle/Resources/views/Includes/sidebar.html.twig
@@ -5,8 +5,17 @@
             <ul>
                 <li class="text-muted menu-title">Menu</li>
 
-                <li class="has_sub">
+                <li>
                     <a href="{{ path('about_list') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Page Qui sommes nous  ' }} </span> </a>
+                </li>
+                <li>
+                    <a href="{{ path('banner_list') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Ajouter banniere' }} </span> </a>
+                </li>
+                <li>
+                    <a href="{{ path('team_list') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Ajouter team' }} </span> </a>
+                </li>
+                <li>
+                    <a href="{{ path('partner_list') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Ajouter partenaire' }} </span> </a>
                 </li>
             </ul>
             <div class="clearfix"></div>
