--- a/src/Labs/BackBundle/Resources/views/Banner/index.html.twig
+++ b/src/Labs/BackBundle/Resources/views/Banner/index.html.twig
@@ -20,7 +20,7 @@
                             <a href="{{ path('homepage') }}">{{ 'AGR' }}</a>
                         </li>
                         <li class="active">
-                            {{ 'Page About' }}
+                            {{ 'Page Banner' }}
                         </li>
                     </ol>
                 </div>
@@ -30,10 +30,10 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div class="card-box">
-                        <h4 class="m-t-0 header-title"><b>{{ 'Page About' }}</b></h4>
+                        <h4 class="m-t-0 header-title"><b>{{ 'Page Bannier' }}</b></h4>
                         <p class="text-muted font-13">
-                            <span class="pull-left">Liste du contenu des pages</span>
-                            <span class="pull-right"> <a href="{{ path('about_add') }}" class="btn btn-primary btn-block">{{ 'Créer page About' }}</a> </span>
+                            <span class="pull-left">Liste des bannieres</span>
+                            <span class="pull-right"> <a href="{{ path('banner_add') }}" class="btn btn-primary btn-block">{{ 'Créer bannier' }}</a> </span>
                         </p>
                         <div class="clearfix"></div>
 
@@ -53,15 +53,15 @@
                             </thead>
 
                             <tbody>
-                            {% for about in abouts %}
+                            {% for banner in banners %}
                                 <tr>
-                                    <td>{{ about.title }}</td>
-                                    <td>{{ about.subtitle }}</td>
-                                    <td>{{ about.created|date('Y-m-d') }}</td>
-                                    <td><a class="btn btn-block btn-primary" href="{{ path('about_edit', {'id' : about.id }) }}">{{ "Modifier" }}</a></td>
-                                    <td><a class="btn btn-block btn-danger" href="{{ path('about_delete', {'id' : about.id }) }}">{{ "Delete" }}</a></td>
+                                    <td>{{ banner.title }}</td>
+                                    <td>{{ banner.subtitle }}</td>
+                                    <td>{{ banner.created|date('Y-m-d') }}</td>
+                                    <td><a class="btn btn-block btn-primary" href="{{ path('banner_edit', {'id' : banner.id }) }}">{{ "Modifier" }}</a></td>
+                                    <td><a class="btn btn-block btn-danger" href="{{ path('banner_delete', {'id' : banner.id }) }}">{{ "Delete" }}</a></td>
                                 </tr>
-                             {% endfor %}
+                            {% endfor %}
                             </tbody>
                         </table>
                     </div>
