--- a/src/Labs/BackBundle/Resources/views/Pages/about_add.html.twig
+++ b/src/Labs/BackBundle/Resources/views/Pages/about_add.html.twig
@@ -33,7 +33,7 @@
                         <h4 class="m-t-0 header-title"><b>{{ 'Formulaire de creation de la page About' }}</b></h4>
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2">
-                                <form class="form-horizontal" role="form">
+                                    {{ form_start(form, {'role': 'form', 'action': path('about_add'), 'attr': {'class': 'form-horizontal'}}) }}
                                     <div class="form-group">
                                         <label class="col-md-2 control-label">{{ 'Titre de la page' }}</label>
                                         <div class="col-md-10">
@@ -67,10 +67,10 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-md-8 col-md-offset-2">
-                                            <button type="button" class="btn waves-effect waves-light btn-primary">{{ 'Créer la page' }}</button>
+                                            <button type="submit" class="btn btn-primary">{{ 'Créer la page' }}</button>
                                         </div>
                                     </div>
-                                </form>
+                                {{ form_end(form) }}
                             </div>
                         </div>
                     </div>
