Mise en place à 90% de admin

--- a/src/Labs/FrontBundle/Resources/views/includes/header.html.twig
+++ b/src/Labs/FrontBundle/Resources/views/includes/header.html.twig
@@ -58,7 +58,7 @@
                     <li><a href="">{{ 'Qui sommes nous'|upper }}</a></li>
                     <li><a href="">{{ 'Projets'|upper }}</a></li>
                     <li><a href="">{{ 'nos plans'|upper }}</a></li>
-                    <li><a href="">{{ 'Phototèque'|upper }}</a></li>
+                    <li><a href="">{{ 'Blog'|upper }}</a></li>
                     <li><a href="">{{ 'partenaires'|upper }}</a></li>
                     <li><a href="">{{ 'contacts'|upper }}</a></li>
                 </ul>
