--- a/src/Labs/UboldBundle/Resources/views/Includes/sidebar.html.twig
+++ b/src/Labs/UboldBundle/Resources/views/Includes/sidebar.html.twig
@@ -17,6 +17,12 @@
                 <li>
                     <a href="{{ path('partner_list') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Ajouter partenaire' }} </span> </a>
                 </li>
+                <li>
+                    <a href="{{ path('project_index') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Créer page project' }} </span> </a>
+                </li>
+                <li>
+                    <a href="{{ path('post_list') }}" class="waves-effect"><i class="ti-files"></i><span> {{ 'Créer blog' }} </span> </a>
+                </li>
             </ul>
             <div class="clearfix"></div>
         </div>
