--- a/src/Labs/FrontBundle/Resources/views/includes/header.html.twig
+++ b/src/Labs/FrontBundle/Resources/views/includes/header.html.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="logo">
             <a href="index.html">
-                <img src="images/logo.png" alt="AGR" class="img-responsive"/>
+                <img src="{{ asset('images/logo.png') }}" alt="AGR" class="img-responsive"/>
             </a>
         </div>
         <div class="header-widgets  header-widgets-desktop">
