--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1533,7 +1533,7 @@ blockquote { border-color: #028100; }
 .footer { border-top: 1px solid #e6e6e6; background-color: #f2f2f2; color: #666666; padding: 30px 0 0 0; }
 @media (min-width: 992px) { .footer { padding: 60px 0 30px 0; } }
 @media (min-width: 992px) { .footer .footer__headings { margin-top: 0; } }
-.footer .btn-primary { color: #454545; }
+.footer .btn-primary { color: #fff; }
 .footer .btn-primary:hover { color: #333333; }
 .footer .read-more:hover { color: #1b92bf; }
 
@@ -1696,7 +1696,7 @@ blockquote { border-color: #028100; }
 #comments-submit-button, .btn { font-family: "Montserrat", Helvetica, Arial, sans-serif; padding: 15px 18px; line-height: 1; border-radius: 2px; transition: all 200ms ease-out; border: 2px solid transparent; }
 #comments-submit-button:focus, #comments-submit-button:active:focus, .btn:focus, .btn:active:focus { outline: 0; }
 
-#comments-submit-button, .btn-primary { background: #028100; border-color: #028100; color: #454545; }
+#comments-submit-button, .btn-primary { background: #028100; border-color: #028100; color: #fff; }
 #comments-submit-button:hover, .btn-primary:hover { background: #028100; border-color: #028100; color: #333333; }
 #comments-submit-button:focus, .btn-primary:focus { background: #028100; border-color: #028100; color: #454545; }
 #comments-submit-button:active, .btn-primary:active { background: #e4b108; border-color: rgba(0, 0, 0, 0.05); box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.125); color: #333333; }
